# melog

./: README.md  start.js
.github/ISSUE_TEMPLATE/: 기본-이슈-템플릿.md
backend/: Cargo.toml  Readme.md
backend/src/: main.rs
backend/src/api/: character.rs  mod.rs  request.rs
backend/src/api/character/: character.rs  mod.rs  request.rs  user_ability.rs  user_android_equipment.rs  user_cashitem_equipment.rs  user_characeter_skill.rs  user_default_info.rs  user_dojang.rs  user_hexa_matrix.rs  user_hexa_matrix_stat.rs  user_hyper_stat_info.rs  user_item_equipment.rs  user_propensity.rs  user_ring_exchange_skill_equipment.rs  user_set_effect.rs  user_stat_info.rs  user_symbol_equipment.rs  user_v_matrix.rs
backend/src/api/guild/: guild.rs  guild_default_info.rs  mod.rs
backend/src/api/notice/: get_cash_shop_notice.rs  get_event_notice.rs  get_update_notice.rs  mod.rs  notice.rs
backend/src/api/ranking/: get_achievement_ranking.rs  get_dojang_ranking.rs  get_guild_ranking.rs  get_overall_ranking.rs  get_theseed_ranking.rs  get_union_ranking.rs  mod.rs  request.rs
backend/src/api/union/: get_union.rs  get_union_artifact.rs  get_union_champion.rs  get_union_raider.rs  mod.rs  request.rs
docs/: API_SCHEMA.md
frontend/: .gitignore  .prettierrc  STRUCTURE.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/: index.ts  (+2 more)
frontend_old/: index.html  package.json  vite.config.ts
melog/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
(+363 files in other folders)
