[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
dashmap = "6.1.0"
serde_with = "3.12.0"
tower-http = { version = "0.6.2", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
once_cell = "1.17"
chrono = "0.4"
chrono-tz = "0.5"