[package]
name = "backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"

[dependencies]
axum = "0.8.6"
dashmap = "6.1.0"
serde_with = "3.15.1"
tower-http = { version = "0.6.6", features = ["cors"] }
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
once_cell = "1.21.3"
chrono = "0.4.42"
chrono-tz = "0.10.4"